[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
#solana
solana-client = "1.17.20"
solana-sdk = "1.17.20"
solana-transaction-status = "1.17.20"
solana-program = "1.17.20"
solana-account-decoder = "1.17.20"
solana-metrics = "1.17.20"

#spl
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"
spl-token-client = "0.8.0"
solana-address-lookup-table-program = "1.17.20"

#serum
serum_dex = "0.5.4"

#tokio
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
hex = "0.4.3"

#serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"

#base64
base64 = "0.21.5"
bincode = "1.3.3"
futures = "0.3.15"

bs58 = "0.4.0"
chrono = "0.4.19"
colored = "2.0.0"
async-recursion = "1.1.1"


pretty_env_logger = "0.5.0"
demand = "1.2.2"
log = "0.4.20"
crossterm = "0.27.0"
reqwest = { version = "0.11.23", features = ["json"] }

jito-protos = { path = "./clients/jito_protos" }
jito-searcher-client = { path = "./clients/searcher_client" }

tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tonic-health = "0.10.2"
arrayref = "0.3.8"
thiserror = "1.0.63"
safe-transmute = "0.11.3"
rand = "0.8.5"

[workspace]
members = ["clients/jito_protos", "clients/searcher_client"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
jito-geyser-protos = { path = "./clients/proto", version = "1.17.20" }

prost = "0.12.1"
prost-types = "0.12.1"

protobuf-src = "1.1.0+21.5"
tonic-build = "0.11.0"
